fix:eye witness button shift and help button size on iphone 5

--- a/src/pages/homepage/home-page.css
+++ b/src/pages/homepage/home-page.css
@@ -103,6 +103,17 @@
   }
 }
 
+@media screen and (max-width: 768px) {
+  .div1 h1 {
+    font-size: 1.7rem;
+    line-height: 29px;
+  }
+
+  .div1 p {
+    font-size: 1rem;
+  }
+}
+
 @media screen and (max-width: 640px) {
   .homepage {
     flex-direction: column;
@@ -131,26 +142,19 @@
   }
 
   .div2 {
-    position: absolute;
-    top: 50%;
+    position: relative;
     width: 100%;
+  }
+
+  .help-btn-container {
+    position: fixed;
+    top: 50%;
   }
 
   .btn-witness {
     position: fixed;
     align-self: center;
     top: 90%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .div1 h1 {
-    font-size: 1.7rem;
-    line-height: 29px;
-  }
-
-  .div1 p {
-    font-size: 1rem;
   }
 }
 
